feat: news fetch based on market
